src/main/log/build_2020-07-11_23-29-37/main/stderr.log
/Users/mukuyo/RI-AI/src/main/src/main.cpp:17:20: error: no matching member function for call to 'create_wall_timer'
    timer_ = this->create_wall_timer(1, std::bind(&Main::timer_callback, this));
             ~~~~~~^~~~~~~~~~~~~~~~~
/Users/mukuyo/ros2_ws/ros2-osx/include/rclcpp/node_impl.hpp:109:7: note: candidate template ignored: could not match 'duration<type-parameter-0-0, type-parameter-0-1>' against 'int'
Node::create_wall_timer(
      ^
/Users/mukuyo/RI-AI/src/main/src/main.cpp:24:67: warning: unused parameter 'vision_message' [-Wunused-parameter]
  void callback(const message_info::msg::RobotCommands::SharedPtr vision_message) {
                                                                  ^
1 warning and 1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
